[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/MechBuilder/BuildingPart.gd" type="Script" id=1]
[ext_resource path="res://scenes/Entities/Parts/Melee/claw.png" type="Texture" id=2]
[ext_resource path="res://scripts/ParticleDisabler.gd" type="Script" id=3]
[ext_resource path="res://sfx/Welding.ogg" type="AudioStream" id=4]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.292398, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.736842, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.108626, 0.246006, 0.603834, 0.816327, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.833119, 0.0712702, 1, 1, 0.825226, 0.0273438, 1, 1, 0.82587, 0.0303602, 0.936047, 1, 0.835294, 0.0745098, 0 )

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float whiteness : hint_range(0,1) = 0.0;

void fragment(){
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = mix(COLOR.rgb, vec3(1), whiteness);
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/whiteness = 0.0

[sub_resource type="Animation" id=3]
resource_name = "Build"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent:material:shader_param/whiteness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteParent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent:material:shader_param/whiteness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteParent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 56.0

[node name="BuildingPart" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 128
lifetime = 3.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
spread = 180.0
gravity = Vector2( 0, 300 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 5.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )
script = ExtResource( 3 )

[node name="SpriteParent" type="Node2D" parent="."]
material = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="SpriteParent"]
unique_name_in_owner = true
use_parent_material = true
texture = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, -8, 8, 0, 0, 8, -8, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Build = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
